- updated GUI - basic working app

--- a/TagsBegoneGUI/TagsBegoneGUI.vcxproj.filters
+++ b/TagsBegoneGUI/TagsBegoneGUI.vcxproj.filters
@@ -32,11 +32,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MainWindow.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RemoveTags.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="MainWindow.hpp">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
