--- a/TagsBegoneGUI/TagsBegoneGUI.vcxproj
+++ b/TagsBegoneGUI/TagsBegoneGUI.vcxproj
@@ -98,7 +98,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="RemoveTags.cpp" />
-    <ClInclude Include="MainWindow.hpp" />
+    <QtMoc Include="MainWindow.hpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="main.cpp" />
     <ClInclude Include="RemoveTags.hpp" />
